# koto

./: package-lock.json
.github/workflows/: site.yml
koto-core/: Cargo.toml
koto-core/src/: lib.rs
koto-server/: Cargo.toml
koto-server/src/: main.rs  messages.rs  session.rs  ws.rs
pages/src/routes/: +page.svelte
pages/src/routes/play/: +page.svelte
web/: package-lock.json  package.json  svelte.config.js
web/src/lib/: constants.ts
web/src/lib/components/: Header.svelte
web/src/routes/: +layout.svelte  styles.css
web/src/routes/play/: +page.svelte
