[package]
name = "koto-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["ws"] }
nanoid = "0.4.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["full"] }
tracing = "0.1.37"
koto-core = { path = "../koto-core" }
tracing-subscriber = "0.3.17"
futures = "0.3.28"
axum-macros = "0.3.7"
